Updated feedback message #110 XSS in Chat

--- a/InsecurePayAndroid/app/src/main/assets/LiveChat.html
+++ b/InsecurePayAndroid/app/src/main/assets/LiveChat.html
@@ -64,7 +64,7 @@ function onClickSend() {
 /*Display thank you message*/
 function displaySubject(subject){
     var obj = JSON.parse(subject);
-    $(".displaySubject").html("Our team will work on: "+obj+". Thank you for your feedback.");
+    $(".displaySubject").html("Thank you for your feedback on: "+obj);
 }
 
 </script>
